Changed the student data CSV file to the WeatherAUS CSV file.

--- a/Student.ipynb
+++ b/Student.ipynb
@@ -215,7 +215,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('./data/student_data.csv')\n",
+    "df = pd.read_csv('./data/WeatherAUS.csv')\n",
     "df = df.drop_duplicates()\n",
     "\n",
     "col_to_remove = [\"sex\", \"Pstatus\",\"reason\",\"Dalc\",\"Walc\",\"G3\"]\n",
