--- a/Student.ipynb
+++ b/Student.ipynb
@@ -9,231 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>school</th>\n",
-       "      <th>age</th>\n",
-       "      <th>address</th>\n",
-       "      <th>Family Size</th>\n",
-       "      <th>Mother Education</th>\n",
-       "      <th>Father Education</th>\n",
-       "      <th>Mother Job</th>\n",
-       "      <th>Father Job</th>\n",
-       "      <th>guardian</th>\n",
-       "      <th>traveltime</th>\n",
-       "      <th>...</th>\n",
-       "      <th>higher</th>\n",
-       "      <th>internet</th>\n",
-       "      <th>romantic</th>\n",
-       "      <th>famrel</th>\n",
-       "      <th>freetime</th>\n",
-       "      <th>goout</th>\n",
-       "      <th>health</th>\n",
-       "      <th>absences</th>\n",
-       "      <th>G1</th>\n",
-       "      <th>G2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>18</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>teacher</td>\n",
-       "      <td>mother</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>17</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>other</td>\n",
-       "      <td>father</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>15</td>\n",
-       "      <td>U</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>at_home</td>\n",
-       "      <td>other</td>\n",
-       "      <td>mother</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>15</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>health</td>\n",
-       "      <td>services</td>\n",
-       "      <td>mother</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GP</td>\n",
-       "      <td>16</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>other</td>\n",
-       "      <td>other</td>\n",
-       "      <td>father</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  school  age address Family Size  Mother Education  Father Education  \\\n",
-       "0     GP   18       U         GT3                 4                 4   \n",
-       "1     GP   17       U         GT3                 1                 1   \n",
-       "2     GP   15       U         LE3                 1                 1   \n",
-       "3     GP   15       U         GT3                 4                 2   \n",
-       "4     GP   16       U         GT3                 3                 3   \n",
-       "\n",
-       "  Mother Job Father Job guardian  traveltime  ...  higher  internet romantic  \\\n",
-       "0    at_home    teacher   mother           2  ...     yes        no       no   \n",
-       "1    at_home      other   father           1  ...     yes       yes       no   \n",
-       "2    at_home      other   mother           1  ...     yes       yes       no   \n",
-       "3     health   services   mother           1  ...     yes       yes      yes   \n",
-       "4      other      other   father           1  ...     yes        no       no   \n",
-       "\n",
-       "  famrel freetime goout health absences  G1  G2  \n",
-       "0      4        3     4      3        6   5   6  \n",
-       "1      5        3     3      3        4   5   5  \n",
-       "2      4        3     2      3       10   7   8  \n",
-       "3      3        2     2      5        2  15  14  \n",
-       "4      4        3     2      5        4   6  10  \n",
-       "\n",
-       "[5 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv('./data/WeatherAUS.csv')\n",
-    "df = df.drop_duplicates()\n",
-    "\n",
-    "col_to_remove = [\"sex\", \"Pstatus\",\"reason\",\"Dalc\",\"Walc\",\"G3\"]\n",
-    "\n",
-    "df = df.drop(columns=col_to_remove)\n",
-    "\n",
-    "appropriate_col_name = {\n",
-    "    \"Medu\" :\"Mother Education\",\n",
-    "    \"Fedu\" : \"Father Education\",\n",
-    "    \"Fjob\": \"Father Job\",\n",
-    "    \"Mjob\" : \"Mother Job\",\n",
-    "    \"famsize\" : \"Family Size\",\n",
-    "    \n",
-    "}\n",
-    "\n",
-    "df.rename(columns=appropriate_col_name, inplace=True)\n",
-    "\n",
-    "df.head()\n"
+    "import numpy as np"
    ]
   }
  ],
