Update the Python version from 3.11.5 to 3.12.0 in the notebook metadata.

--- a/Student.ipynb
+++ b/Student.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -193,15 +193,15 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd \n",
-    " \n",
-    "std_data = pd.read_csv('./data/student_data.csv')\n",
+    "\n",
+    "df = pd.read_csv('./')\n",
     "\n",
     "std_data.head()"
    ]
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
