--- a/WeatherData.ipynb
+++ b/WeatherData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +97,7 @@
     "print(weather_data.info(memory_usage= False))\n",
     "\n",
     "# Display summary statistics\n",
-    "print(weather_data.describe())\n",
-    "\n"
+    "print(weather_data.describe())"
    ]
   },
   {
@@ -403,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
