Update code to save figures.

--- a/WeatherData.ipynb
+++ b/WeatherData.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -404,6 +404,7 @@
     "plt.xlabel('Index')\n",
     "plt.ylabel('Values')\n",
     "plt.legend()\n",
+    "plt.savefig('./Line_Chart.png')\n",
     "plt.show()\n",
     "\n",
     "print(\"\"\"\n",
@@ -424,6 +425,7 @@
     "plt.xlabel('Values')\n",
     "plt.ylabel('Frequency')\n",
     "plt.legend()\n",
+    "plt.savefig('./Distribution_Analysis.png')\n",
     "plt.show()\n",
     "\n",
     "print(\"\"\"\n",
@@ -443,6 +445,7 @@
     "plt.title('Outlier Analysis for {} and {}'.format(variable1, variable2))\n",
     "plt.xlabel('Variables')\n",
     "plt.ylabel('Values')\n",
+    "plt.savefig('./Outlier_Analysis.png')\n",
     "plt.show()\n",
     "\n",
     "print(\"\"\"\n",
